--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Blog</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
