--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
+
     <title>Contacts</title>
-=======
+
     <title>Contact</title>
->>>>>>> cd49a587014bd64c5d8fb2df758762ff8f9a9647
+
     <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -19,9 +19,12 @@
      <!-- End of navigation bar -->
     <!-- BODY CONTENT -->
         <div class="content">
-        <p>
-          Contact page under construction........ 
-            </p>
+        <div id="box">
+            Name:Pradeep<br>
+            Email:pradeeppoojary557@gmail.com<br>
+            Mobile:8150003780
+            
+            </div>
         
         </div>
         <!-- End of body content -->
